--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <BODY>    
             <h1>States</h1>
                 <ul>
-                {% for state in states.values()%}
+                {% for state in states.values | sorted(states)%}
                     <li>State: <state.id>: <B><state.name></B></li>
                 {% endfor %}
                 </ul>
