--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -4,11 +4,11 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>    
-            <h1>States</h1>
-                <ul>
+        <h1>States</h1>
+            <ul>
                 {% for state in states.values | sorted(states)%}
-                    <li>State: <state.id>: <B><state.name></B></li>
+                <li>{{state.id}}: <B>{{state.name}}</B></li>
                 {% endfor %}
-                </ul>
+            </ul>
     </BODY>
 </HTML>
