--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -4,11 +4,11 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>    
-        <h1>States</h1>
-            <ul>
-                {% for state in states.values | sorted(states)%}
-                <li>{{state.id}}: <B>{{state.name}}</B></li>
+        <H1>States</H1>
+            <UL>
+                {% for state in states.values | sorted(state)%}
+                <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
                 {% endfor %}
-            </ul>
+            </UL>
     </BODY>
 </HTML>
