--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <BODY>    
         <H1>States</H1>
             <UL>
-                {% for state in states.values | sorted(state)%}
+                {% for state in states.values | sorted(states.values)%}
                 <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
                 {% endfor %}
             </UL>
