--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
         <TITLE>HBNB</TITLE>
     </HEAD>
-    <BODY>    
+    <BODY>
         <H1>States</H1>
-            <UL>
-                {% for state in states.values | sorted(attribute="name")%}
-                <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
-                {% endfor %}
-            </UL>
+	<UL>
+	    {% for state in states.values() | sorted(attribute="name") %}
+	    <LI>{{ state.id }} <B>{{ state.name }}</B></LI>
+            {% endfor %}
+	</UL>
     </BODY>
 </HTML>
