--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -10,10 +10,10 @@
 	    <LI>{{ state.id }} <B>{{ state.name }}</B></LI>
             {% endfor %}
     </UL>
-    <UL>
-	    {% for cities in cities.values() | sort(attribute="name") %}
-	    <LI>{{ city.id }} <B>{{ city.name }}</B></LI>
+        <UL>
+            {% for city in cities.values() | sort(attribute='name') %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
-	</UL>
+        </UL>
     </BODY>
 </HTML>
