--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -11,7 +11,7 @@
             {% endfor %}
     </UL>
         <UL>
-            {% for city in cities.values() | sort(attribute='name') %}
+            {% for city in state.cities.values() | sort(attribute='name') %}
                 <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
         </UL>
