--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -5,16 +5,17 @@
     </HEAD>
     <BODY>
         <H1>States</H1>
-	<UL>
-	    {% for state in states.values() | sort(attribute="name") %}
-	    <LI>{{ state.id }} <B>{{ state.name }}</B></LI>
-            {% endfor %}
-    </UL>
         <UL>
-            {% for city in cities.values() | sort(attribute='name') %}
-                {% if city.state_id is state.id %}
-                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                {% endif %}
+            {% for state in states.values() | sort(attribute="name") %}
+            <LI>{{ state.id }} <B>{{ state.name }}</B>
+                    <UL>
+                        {% for city in cities.values() | sort(attribute="name") %}
+                            {% if city.state_id == state.id %}
+                            <LI>{{ city.id}} <B>{{ city.name }}></B></LI>
+                            {% endif %}
+                        {% endfor %}
+                    <UL>
+                </LI>
             {% endfor %}
         </UL>
     </BODY>
