--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -9,12 +9,10 @@
 	        {% for state in states.values() | sort(attribute="name") %}
 	        <LI>{{ state.id }} <B>{{ state.name }}</B>
                 <UL>
-                    {% for city in cities.values() | sort(attribute="name") %}
-                        {% if city.state_id == state.id %}
-                        <LI>{{ city.id}} <B>{{ city.name }}></B></LI>
-                        {% endif %}
+                    {% for city in state.cities|sort(attribute='name') %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                     {% endfor %}
-                <UL>
+                </UL>
             </LI>
             {% endfor %}
 	    </UL>
