--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,10 +4,19 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
+        {% if not s_id %}
         <H1>States</H1>
 	<UL>
 	    {% for state in states.values() | sort(attribute="name") %}
 	    <LI>{{ state.id }} <B>{{ state.name }}</B></LI>
+            {% endfor %}
+        </UL>
+        {% elif s_id in states%}
+        <H1>State: {{ states[id].name }}</H1>
+        <H3>Cities:</H3>
+        <UL>
+            {% for city in state.cities|sort(attribute='name') %}
+                <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
             {% endfor %}
         </UL>
         {% else %}
