--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -12,7 +12,7 @@
             {% endfor %}
         </UL>
         {% elif s_id in states%}
-        <H1>State: {{ states[id].name }}</H1>
+        <H1>State: {{ state.name }}</H1>
         <H3>Cities:</H3>
         <UL>
             {% for city in state.cities|sort(attribute='name') %}
