--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -42,7 +42,7 @@
 	border-radius: 4px;
 
 	max-height: 300px;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 .locations:hover .popover {
@@ -58,9 +58,7 @@ ul {
 	padding: 0px;
 	padding-bottom: 20px;
 }
-
-li {
-}	
+	
 
 h2 {
 	font-size: 16px;
